--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                  | 
                 <a href="#table">Random Tables</a>
                  | 
+                <a href="#other">Other</a>
+                 |
                 <a href="#secret">A Small Secret</a>
                  | 
                 <a href="#form">Form</a>
@@ -40,7 +42,7 @@
                 <p>
                     👋 Hi! I’m <b>Christine Phan</b>, a 4th year Computer Engineering student. I have spent the past few years at UCSD doing 
                     various projects through UCSD’s organizations and internships at the <b>Department of Defense</b> and <b>CalTrans</b>. Most recently, 
-                    I have been serving as a project lead for the <i>Engineers Without Borders organization</i>, where we are in the process of 
+                    I have been serving as a project lead for the <span style="color: darkgreen;">Engineers Without Borders organization</span>, where we are in the process of 
                     making a website that connects volunteer tutors to students in California. Right now, I am applying to internships for 
                     the summer, but if that doesn’t work out I plan on studying abroad to South Korea.
                 </p>
@@ -76,6 +78,10 @@
             <hr>
             <section id="fun_facts">
                 <h3> Fun Facts About Me </h3>
+                <h4>My Favorite Color</h4>
+                <svg width="250" height="250">
+                    <circle cx="80" cy="80" r="40" stroke="#696969" stroke-width="5" fill="#228B22" />
+                </svg>
                 <h4>My Top 5 Goals for 2021: </h4>
                     <ol>
                         <li>Learn a new song on the piano</li>
@@ -101,6 +107,14 @@
                         controls
                         src="RISE.mp3">
                     </audio>
+                </figure>
+                <br>
+                <h4>My Favorite Music Video</h4>
+                <figure>
+                    <figcaption> B1A4's Like A Movie </figcaption>
+                    <video>
+                        <source src="music_video.mp4" type="video/mp4">
+                    </video>
                 </figure>
                 <br>
                 <h4>My favorite quote: </h4>
@@ -223,6 +237,17 @@
                     I'm left-handed.
                 </details>
             </section> 
+            <hr>
+            <section id="other">
+                <h3>Other</h3>
+                <p> This is the first code I ever learned! </p>
+                <pre>
+                    <code>
+                        " def main(argv): print("Hello World)"
+                    </code>
+                    <iframe src="canvas.html" height="250" width="250" title="iframe code"></iframe>
+                </pre>
+            </section>
             <hr>
             <section id="form">
                 <h4>Now, let me get to know you more!</h4>
