--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h3> Fun Facts About Me </h3>
                 <h4>My Favorite Color</h4>
                 <svg width="250" height="250">
-                    <circle cx="80" cy="80" r="40" stroke="#696969" stroke-width="5" fill="#228B22" />
+                    <circle cx="80" cy="80" r="40" stroke="#d3d3d3" stroke-width="5" fill="#228B22" />
                 </svg>
                 <h4>My Top 5 Goals for 2021: </h4>
                     <ol>
@@ -112,7 +112,7 @@
                 <h4>My Favorite Music Video</h4>
                 <figure>
                     <figcaption> B1A4's Like A Movie </figcaption>
-                    <video>
+                    <video controls>
                         <source src="music_video.mp4" type="video/mp4">
                     </video>
                 </figure>
