--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <section id="fun_facts">
                 <h3> Fun Facts About Me </h3>
                 <h4>My Favorite Color</h4>
-                <svg width="250" height="250">
-                    <circle cx="80" cy="80" r="40" stroke="#d3d3d3" stroke-width="5" fill="#228B22" />
+                <svg width="250" height="150">
+                    <circle cx="80" cy="80" r="40" stroke="#000000" stroke-width="5" fill="#228B22" />
                 </svg>
                 <h4>My Top 5 Goals for 2021: </h4>
                     <ol>
@@ -243,10 +243,11 @@
                 <p> This is the first code I ever learned! </p>
                 <pre>
                     <code>
-                        " def main(argv): print("Hello World)"
+                        def main(argv): 
+                            print("Hello World")
                     </code>
-                    <iframe src="canvas.html" height="250" width="250" title="iframe code"></iframe>
                 </pre>
+                <iframe src="canvas.html" height="175" width="175" title="iframe code"></iframe>
             </section>
             <hr>
             <section id="form">
