--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <h4>My Favorite Music Video</h4>
                 <figure>
                     <figcaption> B1A4's Like A Movie </figcaption>
+                    <aside> I'm not sure why the controls won't show up, but you can right click the video and do show controls!</aside>
                     <video controls>
                         <source src="music_video.mp4" type="video/mp4">
                     </video>
