--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                  | 
                 <a href="#fun_facts">Fun Facts!</a>
                  | 
-                <a href="#table">Random Tables</a>
+                <a href="#dogs">My Dogs!</a>
                  | 
+                <a href="#table">Random Tables</a>
+                 |
                 <a href="#other">Other</a>
                  |
                 <a href="#secret">A Small Secret</a>
@@ -143,6 +145,39 @@
                 <p>Rail biking in South Korea!</p>
             </section>
             <hr>
+
+            <section id="dogs">
+                <p>
+                    Here are pictures of my dogs!
+                </p>
+    
+                <table>
+                    <colgroup>
+                        <col span="2" style="background-color:cornflowerblue">
+                    </colgroup>
+                    <tr>
+                        <th>Midnight</th>
+                        <th>Lucky</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <picture>
+                                <img src="midnight.jpg" alt="A picture of Midnight">
+                            </picture>
+                            <p>She's a Chihuahua-Jack Russell!</p>
+                        </td>
+                        <td>
+                            <picture>
+                                <img src="lucky.jpg" alt="A picture of Lucky">
+                            </picture>
+                            <p>
+                                She's a Chihuahua mix!
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </section>
+
             <section id="table">
                 <h3> Random Tables</h3>
                 <table>
