--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                     <tr>
                         <td>
                             <picture>
-                                <img src="midnight.jpeg" alt="A picture of Midnight">
+                                <img src="midnight.jpg" alt="A picture of Midnight">
                             </picture>
                             <p>She's a Chihuahua-Jack Russell!</p>
                         </td>
                         <td>
                             <picture>
-                                <img src="lucky.jpeg" alt="A picture of Lucky">
+                                <img src="lucky.jpg" alt="A picture of Lucky">
                             </picture>
                             <p>
                                 She's a Chihuahua mix!
