--- a/index.html
+++ b/index.html
@@ -162,16 +162,16 @@
                     <tr>
                         <td>
                             <picture>
-                                <img src="midnight.jpg" alt="A picture of Midnight">
+                                <img src="midnight.jpg"A picture of Midnight">
                             </picture>
-                            <p>She's a Chihuahua-Jack Russell!</p>
+                            <p>Midnight's a Chihuahua-Jack Russell!</p>
                         </td>
                         <td>
                             <picture>
                                 <img src="lucky.jpg" alt="A picture of Lucky">
                             </picture>
                             <p>
-                                She's a Chihuahua mix!
+                                Lucky's a Chihuahua mix!
                             </p>
                         </td>
                     </tr>
