--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                     <tr>
                         <td>
                             <picture>
-                                <img src="midnight.jpg"A picture of Midnight">
+                                <img src="midnight.jpg" alt="A picture of Midnight" style="width: 300px; height: 400px;">
                             </picture>
                             <p>Midnight's a Chihuahua-Jack Russell!</p>
                         </td>
                         <td>
                             <picture>
-                                <img src="lucky.jpg" alt="A picture of Lucky">
+                                <img src="lucky.jpg" alt="A picture of Lucky" style="width: 300px; height: 400px;">
                             </picture>
                             <p>
                                 Lucky's a Chihuahua mix!
